--- a/index.css
+++ b/index.css
@@ -4,8 +4,12 @@
 /* font-family: 'Metamorphous', cursive; */
 body{
     background-image: url(medallion.gif);
-    background-size: cover;
+    /* background-size: cover;
+    background-repeat: no-repeat; */
+    background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .banner{
@@ -38,7 +42,6 @@ body{
     flex-direction: column;
     align-items: center;
 }
-
 .town_board > img{
     border: 5px solid black;
     width: 20%;
@@ -99,6 +102,7 @@ body{
 
 .contract:hover{
     transform: scale(1.2);
+    box-shadow: 8px 8px 40px black;
 }
 .contract > button:hover{
     transform: scale(1.2);
