--- a/index.css
+++ b/index.css
@@ -141,6 +141,9 @@ body{
     margin-bottom: 1rem;  
     background-color: #dab382b3;
 }
+.potion_card>button:hover{
+    transform: scale(1.2);
+}
 .pick_your_potion{
     font-family: 'Metamorphous', cursive;
     color: #a0875d;
@@ -191,6 +194,10 @@ body{
     width: 55%;
     margin-bottom: 1rem;  
     background-color: #dab382b3;
+}
+
+.oilCard>button:hover{
+    transform: scale(1.2);
 }
 
 .oilCard:hover{
@@ -286,6 +293,7 @@ body{
     color: #a0875d;
     text-shadow: 0px 0px 20px red;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     color: white;
@@ -294,9 +302,44 @@ body{
     width: 20%;
     background-color: #06060085;
 }
+.attackBar{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    color: white;
+}
+.attackBar>img{
+    width: 2rem;
+}
+.swordSprite>img{
+    height: 4rem;
+}
 
+.attackBox>h1{
+    text-shadow: 0px 0px 20px yellow;
+    margin-bottom: .5rem;
+}
 
+.sprite{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+.sprite>img{
+    height: 4rem;
+}
+.endMessage{
+    font-family: 'Metamorphous', cursive;
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    font-size: 5rem;
+    color: white;
+    text-shadow: 0px 0px 50px red;
+}
 
 
 
