Added opacity on hover effects for select witcher screen to make it more clear which Witcher the user is hovering over

--- a/index.css
+++ b/index.css
@@ -35,6 +35,14 @@ body{
     text-shadow: 2px 2px 20px white;
     color: black
 }
+.witcherBust{
+    opacity: 0.6;
+}
+.witcherBust:hover{
+    transform: scale(1.3);
+    opacity: 1;
+}
+
 .town_board{
     display: flex;
     flex-direction: column;
