Fixed issue with geralt and ciri varaivbles being used in two scopes, added hover effects for sprites on battle page

--- a/index.css
+++ b/index.css
@@ -328,6 +328,10 @@ body{
     text-shadow: 0px 0px 20px yellow;
     margin-bottom: .5rem;
 }
+.sprite>img:hover{
+    transform: scale(1.4);
+    
+}
 
 .sprite{
     display: flex;
